
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int a; int b; int c; int d; } ;
typedef TYPE_1__ MyType ;



int sum(MyType x) {
    return x.a + x.b + x.c + x.d;
}
